Fix for jumping chapter title elements

--- a/assets/css/storyteller/storyteller.css
+++ b/assets/css/storyteller/storyteller.css
@@ -93,7 +93,7 @@ h2 {
                    0 0 2px #000;
       }
   .longform .chapter-title img {
-/*    display: none;*/
+    /* display: none; */
     }
   .longform .chapter-title video {
     position: absolute;
@@ -106,6 +106,10 @@ h2 {
     border-radius: 0;
     box-shadow: none;
     }
+    .longform .chapter-title .bgContainer {
+      position: absolute;
+      top: 0;
+      }
     .longform .chapter-title figure {
       position: static!important;
       }
